# sharecipe

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: run-server.sh
src/: dummy_data.py  manage.py
src/project_cfg/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
src/recipe/: constants.py  models.py  oas.py  serializers.py  urls.py  views.py
src/recipe/migrations/: 0001_initial.py  0002_auto_20211213_1930.py  0002_initial.py  0002_recipe_user.py  0003_remove_recipe_user.py
src/recipe/templates/recipe/: ingredients.html  methods.html  recipe.html  theme.html
src/sharecipe/: asgi.py  settings.py  urls.py  wsgi.py
src/user/: models.py  oas.py  serializers.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
src/users/: models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/users/: default.html  login.html  signup.html
